// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`projects > create 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create and connect with psql 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
{"psql-cli-args":["postgres://localhost:5432/test_project"]}"
`;

exports[`projects > create and connect with psql and psql args 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
{"psql-cli-args":["postgres://localhost:5432/test_project","-c","SELECT 1"]}"
`;

exports[`projects > create project with default autoscaled CU 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create project with default fixed size CU 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create project with setting the context 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create with PostgreSQL version 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create with database and role 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create with hipaa flag 1`] = `
"project:
  id: new-project-123456
  name: test_project
  created_at: 2021-01-01T00:00:00.000Z
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > create with org id 1`] = `
"project:
  id: new-project-789012
  name: test_project
  created_at: 2022-01-01T00:00:00.000Z
  org_id: org-2
connection_uris:
  - connection_uri: postgres://localhost:5432/test_project
"
`;

exports[`projects > delete 1`] = `
"id: test
name: test
create_at: 2018-01-01T00:00:00.000Z
"
`;

exports[`projects > get 1`] = `
"id: test
name: test_project
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
"
`;

exports[`projects > get omits details the API did not return 1`] = `
"Project
Name        test_project
ID          test
Created At  2019-01-01T00:00:00Z
"
`;

exports[`projects > get shows a fixed compute size and zero retention 1`] = `
"Project
Name               fixed
ID                 proj-fixed-cu
Region ID          aws-us-east-2
Postgres Version   18
Default Compute    2 CU
History Retention  0 seconds
Created At         2026-06-01T12:00:00Z
Updated At         2026-06-01T12:00:00Z
"
`;

exports[`projects > get shows project details in the table 1`] = `
"Project
Name               application
ID                 proj-details
Region ID          aws-us-east-2
Postgres Version   17
Organization       org-2
Default Compute    0.25-2 CU
History Retention  7 days
Created At         2026-06-01T12:00:00Z
Updated At         2026-06-02T12:00:00Z
"
`;

exports[`projects > list 1`] = `
"projects:
  - id: 1
    name: Project_1
    created_at: 2019-01-01T00:00:00.000Z
    updated_at: 2019-01-01T00:00:00.000Z
  - id: 2
    name: Project_2
    created_at: 2019-01-01T00:00:00.000Z
    updated_at: 2019-01-01T00:00:00.000Z
  - id: 3
    name: Project_3
    created_at: 2019-01-01T00:00:00.000Z
    updated_at: 2019-01-01T00:00:00.000Z
shared_with_you:
  - id: adj-noun-12401747
    region_id: aws-us-east-2
    name: Shared Project
    created_at: 2024-04-03T04:45:46Z
    updated_at: 2024-04-11T16:13:43Z
"
`;

exports[`projects > list marks the linked project in the table 1`] = `
"Projects
ID  Name       Created At
1   Project_1  2019-01-01T00:00:00.000Z
2   Project_2  2019-01-01T00:00:00.000Z
3   Project_3  2019-01-01T00:00:00.000Z

Shared with you
ID                 Name                      Region ID      Created At
adj-noun-12401747  [current] Shared Project  aws-us-east-2  2024-04-03T04:45:46Z
"
`;

exports[`projects > list recoverable projects 1`] = `
"- id: deleted-project-123456
  name: Deleted_Project_1
  region_id: aws-us-east-2
  created_at: 2019-01-01T00:00:00.000Z
  deleted_at: 2019-06-01T00:00:00.000Z
  recoverable_until: 2019-06-08T00:00:00.000Z
- id: deleted-project-789012
  name: Deleted_Project_2
  region_id: aws-us-west-2
  created_at: 2019-02-01T00:00:00.000Z
  deleted_at: 2019-06-02T00:00:00.000Z
  recoverable_until: 2019-06-09T00:00:00.000Z
"
`;

exports[`projects > list with org id 1`] = `
"- id: 4
  name: Project_4
  created_at: 2019-01-01T00:00:00.000Z
  updated_at: 2019-01-01T00:00:00.000Z
  org_id: org-2
- id: 5
  name: Project_5
  created_at: 2019-01-01T00:00:00.000Z
  updated_at: 2019-01-01T00:00:00.000Z
  org_id: org-2
- id: 6
  name: Project_6
  created_at: 2019-01-01T00:00:00.000Z
  updated_at: 2019-01-01T00:00:00.000Z
  org_id: org-2
"
`;

exports[`projects > recover deleted project 1`] = `
"id: test
name: recovered_project
region_id: aws-us-east-2
created_at: 2019-01-01T00:00:00.000Z
"
`;

exports[`projects > update enables logical replication with confirmation bypass 1`] = `
"id: test
name: test_project
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
  enable_logical_replication: true
"
`;

exports[`projects > update hipaa flag 1`] = `
"id: test
name: test_project
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
  hipaa: true
"
`;

exports[`projects > update name 1`] = `
"id: test
name: test_project_new_name
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
"
`;

exports[`projects > update project with default autoscaled CU 1`] = `
"id: test
name: test_project_with_autoscaling
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
"
`;

exports[`projects > update project with default fixed size CU 1`] = `
"id: test
name: test_project_with_fixed_cu
created_at: 2019-01-01T00:00:00Z
settings:
  allowed_ips:
    ips:
      - 192.168.1.1
    protected_branches_only: false
"
`;

exports[`projects > update rejects disabling logical replication 1`] = `""`;

exports[`projects > update requires confirmation to enable logical replication 1`] = `""`;
